samples/_failures_safe/1761089963_4db015_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0cd48c07.c: In function ‘main’:
./samples/SAFE/__tmp_0cd48c07.c:142:54: error: expected ‘)’ at end of input
  142 |     printf("\nTotal logs processed: %d\n", heap.count
      |           ~                                          ^
      |                                                      )
./samples/SAFE/__tmp_0cd48c07.c:142:5: error: expected declaration or statement at end of input
  142 |     printf("\nTotal logs processed: %d\n", heap.count
      |     ^~~~~~
